[package]
name = "isp"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
csv = "1.3.1"
nalgebra = {version="0.33.2", features = ["serde-serialize"]}
rayon = "1.10.0"
serde = {version="1.0.217", features = ["derive"]}
