[package]
name = "ips"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
#debug = false
#split-debuginfo = '...'
#strip = "symbols"
#debug-assertions = false
#overflow-checks = false
lto = true
#panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
nalgebra = {version="0.33.2", features = ["serde-serialize"]}
rayon = "1.10.0"
